src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_tous_les_symboles_speciaux.deca
// Description:
//    Programme minimaliste testant la reconnaissance de tous les symboles spéciaux
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


< 
> 
= 
+ 
- 
* 
/ 
% 
. 
, 
( 
) 
{ 
}
! 
; 
== 
!= 
>= 
<= 
&& 
||