src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_intruction_or_expr_multiple_oubli_expr1.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les or_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli expr1)
//    
//
// Historique:
//    cree le 04/01/2023
{
    || expression_bidon;
}
